fixed margins and font size on mobile

--- a/css/kviz.css
+++ b/css/kviz.css
@@ -16,5 +16,6 @@ div {
     form{
         margin:auto;
         width: 400px;
+        font-size: large;
     }
 }
