--- a/css/nova.css
+++ b/css/nova.css
@@ -8,6 +8,10 @@ img{
     border-radius: 15%;
 }
 
+div{
+    text-align: center;
+}
+
 @media screen and (max-width: 600px){
     img{
         width: 250px;
